Creacion del header de mi blog

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./css/estilo.css">
-	<title>Primer Pagina</title>
+	<title>Mi blog</title>
 </head>
 <body>
-	<p>Hola marica</p>
+	<header>
+		<section>
+			<div>
+				<a href="">Facebook</a>	
+				<a href="">Twitter</a>	
+				<a href="">Instagram</a>	
+				<a href="">Linkedig</a>	
+				<a href="">youtube</a>	
+			</div>
+		</section>
+		<nav>
+			<section>
+				<a href="">Logo</a>
+			</section>
+			<section>
+				<a href="perfil.html">Sobre mi</a>
+			</section>
+		</nav>
+	</header>
 </body>
 </html>
