--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="./css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="./css/resetcss.css"/>
+	<link rel="stylesheet" type="text/css" href="./css/estilo.css"/>
 	<title>Mi blog</title>
 </head>
 <body>
 	<header>
-		<section>
-			<div>
+		<section class="header_icons_container">
+			<div class="icons">
 				<a href="">Facebook</a>	
 				<a href="">Twitter</a>	
 				<a href="">Instagram</a>	
-				<a href="">Linkedig</a>	
-				<a href="">youtube</a>	
+				<a href="">Linkedin</a>	
+				<a href="">YouTube</a>	
 			</div>
 		</section>
 		<nav>
-			<section>
-				<a href="">Logo</a>
+			<section class="nav_logo_container">
+				<a href="/">Logo</a>
 			</section>
-			<section>
+			<section class="profile_link">
 				<a href="perfil.html">Sobre mi</a>
 			</section>
 		</nav>
