Se anexan los iconos de redes sociales al header

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./css/resetcss.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/estilo.css"/>
+	<link rel="stylesheet" href="css/font/flaticon.css">
 	<title>Mi blog</title>
 </head>
 <body>
 	<header>
 		<section class="header_icons_container">
 			<div class="icons">
-				<a href="">Facebook</a>	
-				<a href="">Twitter</a>	
-				<a href="">Instagram</a>	
-				<a href="">Linkedin</a>	
-				<a href="">YouTube</a>	
+				<a href=""><span class="flaticon-001-facebook"></span></a>	
+				<a href=""><span class="flaticon-002-twitter"></span></a>	
+				<a href=""><span class="flaticon-011-instagram"></span></a>	
+				<a href=""><span class="flaticon-010-linkedin"></span></a>	
+				<a href=""><span class="flaticon-008-youtube"></span></a>	
 			</div>
 		</section>
 		<nav>
 			<section class="nav_logo_container">
-				<a href="/">Logo</a>
+				<a href="/"><img src="/" alt="logo de mi blogS"></a>
 			</section>
 			<section class="profile_link">
 				<a href="perfil.html">Sobre mi</a>
