Se anexan los assets, imagen del logo y sus estilos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</section>
 		<nav>
 			<section class="nav_logo_container">
-				<a href="/"><img src="/" alt="logo de mi blogS"></a>
+				<a href="/"><img src="assets/images/logo-negro.png" alt="logo de mi blogS"></a>
 			</section>
 			<section class="profile_link">
 				<a href="perfil.html">Sobre mi</a>
