--- a/index.html
+++ b/index.html
@@ -5,27 +5,19 @@
 	<link rel="stylesheet" type="text/css" href="./css/resetcss.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/estilo.css"/>
 	<link rel="stylesheet" href="css/font/flaticon.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,500,700,900|Roboto:400,500,700&display=swap" rel="stylesheet">
 	<title>Mi blog</title>
 </head>
 <body>
 	<header>
-		<section class="header_icons_container">
-			<div class="icons">
-				<a href=""><span class="flaticon-001-facebook"></span></a>	
-				<a href=""><span class="flaticon-002-twitter"></span></a>	
-				<a href=""><span class="flaticon-011-instagram"></span></a>	
-				<a href=""><span class="flaticon-010-linkedin"></span></a>	
-				<a href=""><span class="flaticon-008-youtube"></span></a>	
-			</div>
-		</section>
-		<nav>
-			<section class="nav_logo_container">
-				<a href="/"><img src="assets/images/logo-negro.png" alt="logo de mi blogS"></a>
-			</section>
-			<section class="profile_link">
-				<a href="perfil.html">Sobre mi</a>
-			</section>
-		</nav>
+		
 	</header>
+	<main class="home_main">
+		<section>
+			<h1 class="home_main-text">Conoce las novedades y <br> noticias del Mundo Tech</h1>
+			<a href="blog.html" class="home_main-button">Entra ya!</a>
+		</section>
+	</main>
+
 </body>
 </html>
