--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="./css/resetcss.css"/>
 	<link rel="stylesheet" type="text/css" href="./css/estilo.css"/>
-	<link rel="stylesheet" href="css/font/flaticon.css">
+	<link rel="stylesheet" href="css/font/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto+Slab:400,500,700,900|Roboto:400,500,700&display=swap" rel="stylesheet">
+
 	<title>Mi blog</title>
 </head>
-<body>
+<body class="home-body">
 	<header>
 		<section class="header_icons_container">
 			<div class="icons">
-				<a href=""><span class="flaticon-001-facebook"></span></a>	
-				<a href=""><span class="flaticon-002-twitter"></span></a>	
-				<a href=""><span class="flaticon-011-instagram"></span></a>	
-				<a href=""><span class="flaticon-010-linkedin"></span></a>	
-				<a href=""><span class="flaticon-008-youtube"></span></a>	
+				<a href=""><span class="icon-facebook"></span></a>	
+				<a href=""><span class="icon-twitter"></span></a>	
+				<a href=""><span class="icon-instagram"></span></a>	
+				<a href=""><span class="icon-linkedin2"></span></a>	
+				<a href=""><span class="icon-youtube"></span></a>	
 			</div>
 		</section>
 		<nav>
@@ -23,9 +25,16 @@
 				<a href="/"><img src="assets/images/logo-negro.png" alt="logo de mi blogS"></a>
 			</section>
 			<section class="profile_link">
-				<a href="perfil.html">Sobre mi</a>
+				<a href="perfil.html">Sobre mí</a>
 			</section>
 		</nav>
 	</header>
+	<main class="home_main">
+		<section>
+			<h1 class="home_main-text">Conoce las novedades y <br> noticias del Mundo Tech</h1>
+			<a href="blog.html" class="home_main-button">Entra ya!</a>
+		</section>
+	</main>
+
 </body>
 </html>
