--- a/blogs.html
+++ b/blogs.html
@@ -86,7 +86,7 @@
         </section>
     </main>
     <footer>
-        <p></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </footer>
 </body>
 </html>
