se termina la pagina blogs

--- a/blogs.html
+++ b/blogs.html
@@ -31,7 +31,7 @@
     </header>
     <main class="blogs_main">
         <section class="blogs_new_container">
-            <div class="blogs_main_new">
+            <div class=" grid_container blogs_main_new">
                 <h3>Soy titulo</h3>
                 <div class="blogs_new_img_container">
                     <img src="assets/images/retroGag.png" alt="imagen retro game plays">
@@ -44,7 +44,7 @@
             </div>
         </section>
         <section class="blogs_post_container">
-            <div>
+            <div class="grid_container">
                 <h3>Titulo Blogpost</h3>
                 <article class="post_container">
                     <img src="./assets/images/visor.jpg" alt="imagen post 1">
