se realiza todo el main de blogpost, quedan faltando detalles

--- a/blog.html
+++ b/blog.html
@@ -29,11 +29,38 @@
 			</section>
 		</nav>
     </header>
-
-
-
-
-
+    <main>
+        <section class="grid_container blogpost_img_container">
+            <img src="./assets/images/retroGag.png" alt="imagen principal">
+        </section>
+        <section class="blogpost_main_container">
+            <div class="grid_container">
+                <h3>Título noticia</h3>
+                <article>
+                    <h1>Titulo del BlogPost</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae ut ipsum expedita ab, molestias voluptatum assumenda vel aliquid a ullam inventore. Maiores, illo expedita! Laudantium similique in quae nobis ad!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi odio exercitationem est atque quod at beatae quo aperiam dolore, ratione unde sed vel, eaque veritatis voluptas minima neque numquam temporibus!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit dolore voluptate ab quo vero ullam magni, quam quidem dolores nesciunt earum, ratione reiciendis voluptates mollitia aperiam itaque distinctio sed cum.</p>
+                </article>
+            </div>
+        </section>
+        <section class="contact_main_container">
+            <div>
+                <img src="" alt="imagen contacto">
+                <div class="contact_left">
+                    <a href="">Contacto</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="contact_rigth">
+                <img src="" alt="imagen escribeme">
+                <div>
+                    <a href="">Escribe</a>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
     </footer>
