--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,7 @@
                 <div class="blogs_new_info_container">
                     <h2>Tìtulo Blogs</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, facere voluptatem. Iste, nisi dolor, ullam magnam nostrum alias id voluptatum libero optio quaerat, laudantium ea aut porro adipisci. Ullam, labore.</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </div>
             </div>
         </section>
@@ -50,37 +50,37 @@
                     <img src="./assets/images/visor.jpg" alt="imagen post 1">
                     <p>Titulo Blog</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci suscipit doloribus dolor neque sapiente, culpa quasi praesentium quae! Inventore provident architecto facere amet perferendis itaque dolor maxime qui voluptate?</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </article>
                 <article class="post_container">
                     <img src="./assets/images/manosLaptop.png" alt="imagen post 1">
                     <p>Titulo Blog</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci suscipit doloribus dolor neque sapiente, culpa quasi praesentium quae! Inventore provident architecto facere amet perferendis itaque dolor maxime qui voluptate?</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </article>
                 <article class="post_container">
                     <img src="./assets/images/laptop.png" alt="imagen post 1">
                     <p>Titulo Blog</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci suscipit doloribus dolor neque sapiente, culpa quasi praesentium quae! Inventore provident architecto facere amet perferendis itaque dolor maxime qui voluptate?</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </article>
                 <article class="post_container">
                     <img src="./assets/images/dron.png" alt="imagen post 1">
                     <p>Titulo Blog</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci suscipit doloribus dolor neque sapiente, culpa quasi praesentium quae! Inventore provident architecto facere amet perferendis itaque dolor maxime qui voluptate?</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </article>
                 <article class="post_container">
                     <img src="./assets/images/manosUp.png" alt="imagen post 1">
                     <p>Titulo Blog</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci suscipit doloribus dolor neque sapiente, culpa quasi praesentium quae! Inventore provident architecto facere amet perferendis itaque dolor maxime qui voluptate?</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </article>
                 <article class="post_container">
                     <img src="./assets/images/retroGag.png" alt="imagen post 1">
                     <p>Titulo Blog</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio adipisci suscipit doloribus dolor neque sapiente, culpa quasi praesentium quae! Inventore provident architecto facere amet perferendis itaque dolor maxime qui voluptate?</p>
-                    <a href="" class="blogs_button">Leer más</a>
+                    <a href="blog.html" class="blogs_button">Leer más</a>
                 </article>
             </div>
         </section>
