Se completa pagina blog

--- a/blog.html
+++ b/blog.html
@@ -46,17 +46,17 @@
         </section>
         <section class="contact_main_container">
             <div>
-                <img src="" alt="imagen contacto">
+                <img src="assets/images/newsletter.png" alt="">
                 <div class="contact_left">
-                    <a href="">Contacto</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <a href="/">Contacto</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, libero deleniti ut repudiandae minima.</p>
                 </div>
             </div>
-            <div class="contact_rigth">
-                <img src="" alt="imagen escribeme">
-                <div>
-                    <a href="">Escribe</a>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+            <div>
+                <img src="assets/images/like.png" alt="">
+                <div class="contact_right">
+                    <a href="/">Escribe</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis.</p>
                 </div>
             </div>
         </section>
